@@ -574,10 +574,12 @@ extern "C"
 #ifdef SPONGE
   void ca_sponge
     (const int* lo, const int* hi,
-     BL_FORT_FAB_ARG_3D(state),
+     BL_FORT_FAB_ARG_3D(s_old),
+     BL_FORT_FAB_ARG_3D(s_new),
      BL_FORT_FAB_ARG_3D(source),
      BL_FORT_FAB_ARG_3D(vol),
-     const amrex::Real* dx, const amrex::Real& dt, const amrex::Real* time);
+     const amrex::Real* dx, const amrex::Real& dt,
+     const amrex::Real* time, const int is_new);
 
   void update_sponge_params(const amrex::Real* time);
 #endif
