@@ -7,15 +7,17 @@ using namespace amrex;
 void
 Castro::construct_old_sponge_source(Real time, Real dt)
 {
+    MultiFab& S_new = get_new_data(State_Type);
+
     int ng = Sborder.nGrow();
 
     old_sources[sponge_src]->setVal(0.0);
 
-    if (!time_center_sponge || !do_sponge) return;
-
     update_sponge_params(&time);
 
     const Real *dx = geom.CellSize();
+
+    int is_new = 0;
 
 #ifdef _OPENMP
 #pragma omp parallel
@@ -26,9 +28,10 @@ Castro::construct_old_sponge_source(Real time, Real dt)
 
 	ca_sponge(ARLIM_3D(bx.loVect()), ARLIM_3D(bx.hiVect()),
 		  BL_TO_FORTRAN_3D(Sborder[mfi]),
+                  BL_TO_FORTRAN_3D(S_new[mfi]),
 		  BL_TO_FORTRAN_3D((*old_sources[sponge_src])[mfi]),
 		  BL_TO_FORTRAN_3D(volume[mfi]),
-		  ZFILL(dx), dt, &time);
+		  ZFILL(dx), dt, &time, is_new);
 
     }
 
@@ -37,6 +40,7 @@ Castro::construct_old_sponge_source(Real time, Real dt)
 void
 Castro::construct_new_sponge_source(Real time, Real dt)
 {
+    MultiFab& S_old = get_old_data(State_Type);
     MultiFab& S_new = get_new_data(State_Type);
 
     int ng = 0;
@@ -49,6 +53,8 @@ Castro::construct_new_sponge_source(Real time, Real dt)
 
     const Real *dx = geom.CellSize();
 
+    int is_new = 1;
+
 #ifdef _OPENMP
 #pragma omp parallel
 #endif
@@ -57,19 +63,12 @@ Castro::construct_new_sponge_source(Real time, Real dt)
 	const Box& bx = mfi.tilebox();
 
 	ca_sponge(ARLIM_3D(bx.loVect()), ARLIM_3D(bx.hiVect()),
+                  BL_TO_FORTRAN_3D(S_old[mfi]),
 		  BL_TO_FORTRAN_3D(S_new[mfi]),
 		  BL_TO_FORTRAN_3D((*new_sources[sponge_src])[mfi]),
 		  BL_TO_FORTRAN_3D(volume[mfi]),
-		  ZFILL(dx), dt, &time);
+		  ZFILL(dx), dt, &time, is_new);
 
-    }
-
-    // Time center the source term.
-
-    if (time_center_sponge) {
-	new_sources[sponge_src]->mult(0.5);
-
-	MultiFab::Saxpy(*new_sources[sponge_src],-0.5,*old_sources[sponge_src],0,0,NUM_STATE,ng);
     }
 
 }
